# gr-FDC

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
cmake/Modules/: FDCConfig.cmake  gnuradio-FDCConfig.cmake
docs/: CMakeLists.txt  README.FDC
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: FDC_example.grc
grc/: CMakeLists.txt  FDC_FrequencyDomainChannelizer.block.yml  FDC_FrequencyDomainChannelizer.xml  FDC_PowerActivationChannel.block.yml  FDC_PowerActivationChannel.xml  FDC_SegmentDetection.block.yml  FDC_SegmentDetection.xml  FDC_WaterfallMsgTagging.block.yml  FDC_WaterfallMsgTagging.xml  FDC_activity_controlled_channelizer_vcm.xml  FDC_activity_detection_channelizer_vcm.block.yml  FDC_activity_detection_channelizer_vcm.xml  FDC_overlap_save.block.yml  FDC_overlap_save.xml  FDC_phase_shifting_windowing_vcc.block.yml  FDC_phase_shifting_windowing_vcc.xml  FDC_vector_cut_vxx.block.yml  FDC_vector_cut_vxx.xml
include/FDC/: CMakeLists.txt  PowerActivationChannel.h  SegmentDetection.h  activity_controlled_channelizer_vcm.h  activity_detection_channelizer_vcm.h  api.h  overlap_save.h  phase_shifting_windowing_vcc.h  vector_cut_vxx.h
include/gnuradio/FDC/: CMakeLists.txt  PowerActivationChannel.h  SegmentDetection.h  activity_detection_channelizer_vcm.h  api.h  overlap_save.h  phase_shifting_windowing_vcc.h  vector_cut_vxx.h
lib/: CMakeLists.txt  PowerActivationChannel_impl.cc  PowerActivationChannel_impl.h  SegmentDetection_impl.cc  SegmentDetection_impl.h  activity_controlled_channelizer_vcm_impl.cc  activity_controlled_channelizer_vcm_impl.h  activity_detection_channelizer_vcm_impl.cc  activity_detection_channelizer_vcm_impl.h  fft.h  get_time.h  overlap_save_impl.cc  overlap_save_impl.h  phase_shifting_windowing_vcc_impl.cc  phase_shifting_windowing_vcc_impl.h  qa_FDC.cc  qa_FDC.h  test_FDC.cc  vector_cut_vxx_impl.cc  vector_cut_vxx_impl.h  windows.h
python/: CMakeLists.txt  FrequencyDomainChannelizer.py  WaterfallMsgTagging.py  __init__.py
python/FDC/: CMakeLists.txt  FrequencyDomainChannelizer.py  WaterfallMsgTagging.py  __init__.py
python/FDC/bindings/: CMakeLists.txt  PowerActivationChannel_python.cc  SegmentDetection_python.cc  activity_detection_channelizer_vcm_python.cc  overlap_save_python.cc  phase_shifting_windowing_vcc_python.cc  python_bindings.cc  vector_cut_vxx_python.cc
python/FDC/bindings/docstrings/: PowerActivationChannel_pydoc_template.h  SegmentDetection_pydoc_template.h  activity_detection_channelizer_vcm_pydoc_template.h  overlap_save_pydoc_template.h  phase_shifting_windowing_vcc_pydoc_template.h  vector_cut_vxx_pydoc_template.h
swig/: CMakeLists.txt  FDC_swig.i
